vbnc/vbnc/vbnc/tests/Errors/30060-10.vb
Class T
    Const M_String As String = 2.0!
End Class